Update markdown files